fixed some spacing/margin

--- a/css/index.css
+++ b/css/index.css
@@ -514,7 +514,7 @@ footer a:hover {
         align-items: center;
     }
     /* gallery */
-    #gallery {
+    .gallery-container {
         margin-bottom: 3rem;
         flex-direction: column-reverse;
     }
@@ -530,7 +530,7 @@ footer a:hover {
     .home {
         width: 100%;
     }
-    .container img {
+    .container img:not(.gallery-item img) {
         display: block;
         margin: 0.5rem auto;
     }
